Modbus: extend documentation

Clarify that default Modbus client implementation does not handle all
FunctionCodes and that this needs to be implemented in the custom
Modbus clients. Also explicitly mention that UnknownError can also mean
that the received function code is not implemented.

This commit amends 09927894825d97197ffa656576e6be780371dda0

Fixes: QTBUG-103879
Pick-to: 6.4 6.3 6.2 5.15
Change-Id: Ifb70107cda2595293b9759504fcfc1ca1a3abfa7
Reviewed-by: Karsten Heimrich <karsten.heimrich@qt.io>
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>
Reviewed-by: Sze Howe Koh <szehowe.koh@gmail.com>